--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ cache:
   directories:
     - node_modules
 script:
+  - npm install
   - npm test
   - npm run build
 on:
@@ -13,3 +14,19 @@ deploy:
   provider: heroku
   api_key: $HEROKU_KEY
   app: $HEROKU_APP
+language: node_js
+node_js:
+  - "stable"
+cache:
+  directories:
+    - node_modules
+script:
+  - npm test
+  - npm run build
+deploy:
+  provider: surge
+  skip_cleanup: true
+  domain: <my_name_here>.surge.sh
+  project: ./build/
+on:
+  branch: master
